Adjust CSS and add title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	
 
-<title></title>
+<title>Sum Calculator</title>
 </head>
 
 <body>
@@ -29,16 +29,14 @@
 	  <button text="Run" onClick="sayVal()">Addition</button>
 	<br>
 	<br>
-	  <p>
+	  <h3>
 	    Result
-	  </p>
+	  </h3>
 	  <input type="text" id="result">
 	</div>
 </body>
 </html>
 
-<script src="script.js">
-	
-</script>
+<script src="script.js"></script>
 
 </html>
