--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	
 
-<title>Sum Calculator</title>
+<title></title>
 </head>
 
 <body>
@@ -29,14 +29,16 @@
 	  <button text="Run" onClick="sayVal()">Addition</button>
 	<br>
 	<br>
-	  <h3>
+	  <p>
 	    Result
-	  </h3>
+	  </p>
 	  <input type="text" id="result">
 	</div>
 </body>
 </html>
 
-<script src="script.js"></script>
+<script src="script.js">
+	
+</script>
 
 </html>
