Set back to normal

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	
 
-<title></title>
+<title>Sum Calculator</title>
 </head>
 
 <body>
@@ -37,16 +37,6 @@
 </body>
 </html>
 
-<script type="text/javascript">
-	function sayVal() {
-		var input1 = parseInt(document.getElementById("in1").value);
-		var input2 = parseInt(document.getElementById("in2").value);
-	  function add(value1, value2) {
-	    return (value1 + value2)
-	  }
-	  var sum = add(input1,input2); 
-		document.getElementById("result").value = sum;
-	}
-</script>
+<script src="script.js"></script>
 
 </html>
