--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	
 
-<title>Sum Calculator</title>
+<title>Calculator</title>
 </head>
 
 <body>
 	<div class=center>
 	  <h2 class=pushtop>
-	    Sum Calculator
+	    Basic Calculator
 	  </h2>
 	  <p>
 	    Enter First Number
@@ -26,7 +26,8 @@
 	  <input type="text" id="in2">
 	<br>
 	<br>
-	  <button text="Run" onClick="sayVal()">Addition</button>
+	  <button text="Run" onClick="addition()">Addition</button>
+	  <button text="Run" onClick="subtraction()">Subtraction</button>
 	<br>
 	<br>
 	  <p>
