--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	  <input type="text" id="in2">
 	<br>
 	<br>
-	  <button text="Run" onClick="addition()">Addition</button>
-	  <button text="Run" onClick="subtraction()">Subtraction</button>
+	  <button id="addition" text="Run" onClick="checkButton(id)">Addition</button>
+  	  <button id="subtraction" text="Run" onClick="checkButton(id)">Subtract</button>
 	<br>
 	<br>
 	  <p>
