--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 	  <input type="text" id="in2">
 	<br>
 	<br>
-	  <button id="addition" text="Run" onClick="checkButton(id)">Addition</button>
-  	  <button id="subtraction" text="Run" onClick="checkButton(id)">Subtract</button>
+	  <button id="addition" text="Run" onClick="checkButton(id)">+</button>
+  	  <button id="subtraction" text="Run" onClick="checkButton(id)">-</button>
+  	  <button id="division" text="Run" onClick="checkButton(id)">/</button>
+  	  <button id="multiply" text="Run" onClick="checkButton(id)">x</button>
 	<br>
 	<br>
 	  <p>
